<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DinnerPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeMessage">Welcome to Dinner Planner!\n\nHere you will be able to easily plan your dinner.\n\nOn the next page start by selecting number of participants.\n\nThen select your courses.\n\nThen the magic happens!</string>
    <string name="total_cost"> Total Cost:</string>
    <string name="start">Start!</string>
    <string name="participants">Participants:</string>
    <string name="total_cost_Value">0</string>
    <string name="menu_title">Choose Menu</string>
    <string name="submenu_title1">Starter</string>
    <string name="submenu_title2">Main Course</string>
    <string name="submenu_title3">Dessert</string>
    <string name="dish">Dish x</string>

    <color name="white">#FFFFFF</color>
    <color name="red"> 	#FF0000</color>

    <string-array name="dishes"></string-array>

    <string name="title_activity_final_view">FinalView</string>

    <string name="create">Create</string>

    <string name="instructions">Instructions</string>

    <string name="back">Back</string>

    <string name="ingredients">Ingredients</string>

    <string name="participants_Value">0</string>

</resources>
